--- a/src/views/landingpage.ejs
+++ b/src/views/landingpage.ejs
@@ -15,6 +15,7 @@
         <a href="/about" class="nav-link">About</a>
         <a href="/contact" class="nav-link">Contact</a>
         <a href="/ide" class="nav-link">Demo</a>
+        <a href="/request-exam" class="nav-link">Request Hosting</a>
       </nav>
       <div class="user-actions">
         <a href="/ide" class="action-btn demo-btn">Try Demo</a>
